--- a/templates/root.html
+++ b/templates/root.html
@@ -73,7 +73,7 @@
                         </a>
                     </li>
                     
-                    <li class="nav-item">
+                    {% comment %} <li class="nav-item">
                         <a class="nav-link" href="#">
                             <div>
                                 <span class="material-icons icon">chat</span>
@@ -81,7 +81,7 @@
                             </div>
                             <span class="arrow material-icons">chevron_right</span>
                         </a>
-                    </li>
+                    </li> {% endcomment %}
                     <li class="nav-item">
                         <a class="nav-link" href="{% url 'profile' %}">
                             <div>
